style(copy-button): adjust top spacing to avoid being too close to the edge

--- a/src/components/CodeBlockWithCopy/CodeBlockWithCopy.scss
+++ b/src/components/CodeBlockWithCopy/CodeBlockWithCopy.scss
@@ -21,7 +21,7 @@
 
 .copy-button {
   position: absolute;
-  top: 0.32rem;
+  top: 0.6rem;
   right: 0.5rem;
   z-index: 10;
 
